--- a/Lab6/css/style.css
+++ b/Lab6/css/style.css
@@ -56,7 +56,7 @@ button{
     background-color: #D9534F;
     opacity: 0.6;
 }
-.chec{
+.chec > p {
     text-decoration: line-through;
 }.itemShop{
     font-style: italic;
